appId: io.ente.locker
---
- launchApp
- tapOn: Add item
- tapOn: |-
    Secret
    Preserve account credentials.
- inputText: "automatedSecretName"
- pressKey: Enter

- inputText: "automatedUserName"
- pressKey: Enter
- inputText: "automatedPassword"
- pressKey: Enter
- tapOn: |-
    Additional notes
    Recovery methods, security questions, ...
- inputText: "someRandomNotes"
- tapOn: |-
    Additional notes
- scrollUntilVisible:
    element: "Important"

- tapOn: Important
- tapOn: Save
# Wait till home screen it not visible
- extendedWaitUntil:
    visible: Add item
    timeout: 10000

- tapOn: automatedSecretName
- tapOn: show_password
- assertVisible:
    text: automatedPassword
- tapOn: hide_password
- tapOn: Edit
- tapOn: someRandomNotes

- inputText: " edited"
- tapOn: Save
- extendedWaitUntil:
    notVisible:
      id: Edit secret
    timeout: 10000

- assertVisible:
    text: someRandomNotes edited
- tapOn: Back
- longPressOn: automatedSecretName
- tapOn: Delete
- tapOn: Yes, delete item
- extendedWaitUntil:
    visible: "Deleting item..."
    timeout: 10000
- swipe:
    start: 2%, 50%
    end: 80%, 50%
    duration: 300
- tapOn: Trash
- tapOn: automatedSecretName
